--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=44.198.159.203;Database=dbTeste;User Id=sa_app;Password=ci953ea@SAAPP;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=IPSERVER;Database=dbTeste;User Id=sa_app;Password=SENHA;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
